--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
     <meta name="author" content="Jason Hurtado">
 
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/pricing/">
+    <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+<div class="navBar d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow">
+    <img src="images/logo2.png" id="image1" class="my-0 mr-md-auto font-weight-normal">
+    <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="#">Home</a>
+        <a class="p-2 text-dark" href="#">About</a>
+        <a class="p-2 text-dark" href="#">Portfolio</a>
+        <a class="p-2 text-dark" href="#">Resume</a>
+        <a class="p-2 text-dark" href="#">Contact</a>
+    </nav>
+</div>
 
+<div class="main">
+
+</div>
 
 <script src="js/script.js"></script>
 </body>
