--- a/content.html
+++ b/content.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+    <title>Content</title>
     <meta name="description" content="Jason Portfolio">
     <meta name="author" content="Jason Hurtado">
 
@@ -19,18 +19,12 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">Home</a>
         <a class="p-2 text-dark" href="#">About</a>
-        <a class="p-2 text-dark" href="content.html">Portfolio</a>
         <a class="p-2 text-dark" href="#">Resume</a>
         <a class="p-2 text-dark" href="#">Contact</a>
     </nav>
 </div>
 
-<div class="main">
-
-
-</div>
-
-<div class="footer">
+<div class="main1">
 
 </div>
 
