Feature: add profile picture to the main content

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 </div>
 
 <div class="main">
-
-
+        <img id="pic" src="images/pic.png" alt="profile picture">
 </div>
 
 <div class="footer">
