Feature: complete footer with about me, skills, and projects overview.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/pricing/">
     <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
 </head>
 
 <body>
-<div class="navBar d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow">
+<div class="navBar d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 border-bottom box-shadow">
     <img src="images/logo2.png" id="image1" class="my-0 mr-md-auto font-weight-normal">
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">Home</a>
@@ -27,9 +29,30 @@
 
 <div class="main">
         <img id="pic" src="images/pic.png" alt="profile picture">
+        <h1 align="center">Computer Science Student</h1>
 </div>
 
+
 <div class="footer">
+    <div id="column1" class="columns" style="text-align: center">
+        <h2 align="center">About Me</h2>
+        <i id="about" class="fas fa-id-card"></i>
+
+
+        <p align="center">My name is Jason Hurtado. I am a passionate Computer Science student looking
+        for the opportunity to learn more and improve my craft in programming.</p>
+    </div>
+    <div id="column2" class="columns" style="text-align: center">
+        <h2 align="center">Skills</h2>
+        <i id="skills" class="fas fa-edit"></i>
+        <p align="center"> Proficient in Linux, Git, Github, HTML, and CSS with the ambition to expand my knowledge.</p>
+    </div>
+    <div id="column3" class="columns" style="text-align: center">
+        <h2 align="center">Projects</h2>
+        <i id="projects" class="fas fa-project-diagram"></i>
+        <p align="center"> Web-based Git tutorial, Web-based history of the internet
+        , and personal web-pages</p>
+    </div>
 
 </div>
 
