--- a/content.html
+++ b/content.html
@@ -14,19 +14,75 @@
 </head>
 
 <body>
-<div class="navBar d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow">
+<div class="navBar d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 border-bottom box-shadow">
     <img src="images/logo2.png" id="image1" class="my-0 mr-md-auto font-weight-normal">
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">Home</a>
+        <a class="p-2 text-dark" href="index.html">Home</a>
         <a class="p-2 text-dark" href="#">About</a>
         <a class="p-2 text-dark" href="#">Resume</a>
         <a class="p-2 text-dark" href="#">Contact</a>
     </nav>
 </div>
 
-<div class="main1">
+<div  class="container">
+        <div class="row">
+            <div class="col-md-8 blog-main">
 
+                <div class="blog-post">
+                    <h1 class="blog-post-title">Portfolio</h1>
+
+                    <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
+                    <hr>
+                    <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+                    <blockquote>
+                        <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    </blockquote>
+                    <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                    <h2>Heading</h2>
+                    <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+                    <h3>Sub-heading</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                    <pre><code>Example code block</code></pre>
+                    <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+                    <h3>Sub-heading</h3>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                    <ul>
+                        <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
+                        <li>Donec id elit non mi porta gravida at eget metus.</li>
+                        <li>Nulla vitae elit libero, a pharetra augue.</li>
+                    </ul>
+                </div>
+
+
+            </div>
+            <aside class="col-md-4 blog-sidebar">
+                <div class="p-3 mb-3 bg-light rounded">
+                    <h4 class="font-italic">About</h4>
+                    <p class="mb-0"></p>
+                </div>
+
+                <div class="p-3">
+                    <h4 class="font-italic">Technologies</h4>
+                    <ol class="list-unstyled mb-0">
+
+                    </ol>
+                </div>
+
+                <div class="p-3">
+                    <h4 class="font-italic">Contact</h4>
+                    <ol class="list-unstyled">
+                        <li><a href="https://github.com/jayhurtado">GitHub</a></li>
+                        <li><a href="https://linkedin.com/in/jason-m-hurtado">LinkedIn</a></li>
+                    </ol>
+                </div>
+            </aside><!-- /.blog-sidebar -->
+        </div>
 </div>
+
+
+<!--<div class="footer1">-->
+
+<!--</div>-->
 
 <script src="js/script.js"></script>
 </body>
