--- a/content.html
+++ b/content.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/pricing/">
     <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body>
@@ -58,12 +59,19 @@
             <aside class="col-md-4 blog-sidebar">
                 <div class="p-3 mb-3 bg-light rounded">
                     <h4 class="font-italic">About</h4>
-                    <p class="mb-0"></p>
+                    <p class="mb-0">My name is Jason Hurtado. I am a passionate Computer Science student looking
+                        for the opportunity to learn more and improve my craft in programming.</p>
                 </div>
 
                 <div class="p-3">
                     <h4 class="font-italic">Technologies</h4>
                     <ol class="list-unstyled mb-0">
+                        <li><p>Bootstrap <i class="fab fa-bootstrap"></i></p></li>
+                        <li><p>Linux <i class="fab fa-linux"></i></p></li>
+                        <li><p>Git <i class="fab fa-git-square"></i></p></li>
+                        <li><p>Github <i class="fab fa-github"></i></p></li>
+                        <li><p>HTML <i class="fab fa-html5"></i></p></li>
+                        <li><p>CSS <i id="cssIcon" class="fab fa-css3"></i></p></li>
 
                     </ol>
                 </div>
