Feature: main content of the content.html page complete.

--- a/content.html
+++ b/content.html
@@ -19,7 +19,6 @@
     <img src="images/logo2.png" id="image1" class="my-0 mr-md-auto font-weight-normal">
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="index.html">Home</a>
-        <a class="p-2 text-dark" href="#">About</a>
         <a class="p-2 text-dark" href="#">Resume</a>
         <a class="p-2 text-dark" href="#">Contact</a>
     </nav>
@@ -35,20 +34,24 @@
                     <p>This portfolio will show the skills, techniques and technologies acquired while attending IS 117.</p>
                     <hr>
                     <h3>Git & Github</h3>
-                    <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+                    <p>With <span class="important">Git</span> I learned that it's a version control system that is used to help keep track of updates made.
+                        The main steps that you will always use are <span class="lessImportant">add, commit, push, and pull</span>. Then you use <span class="important">Github</span> to host the commands you have done on Git.
+                     It is a Web-based Graphical User Interface for to make it more interactive for the user.</p>
                     <h3>Linux</h3>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-                    <pre><code>Example code block</code></pre>
-                    <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+                    <p>With <span class="important">Linux</span> I learned that it is an open-source operating system that uses command line.
+                    We were able to SSH into the AFS NJIT server to use the Linux operating system. There we learned how to make/change directories, create files, look at the entire
+                        list of files and directories with commands such as <span class="lessImportant">mkir, cd, touch, ls</span>.</p>
                     <h3>HTML & CSS</h3>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <ul>
-                        <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
-                        <li>Donec id elit non mi porta gravida at eget metus.</li>
-                        <li>Nulla vitae elit libero, a pharetra augue.</li>
-                    </ul>
+                    <p>With <span class="important">HTML & CSS</span> I learned the basics of using both and how the coexist with
+                        one another. HTML has <span class="important">tags/elements</span> such as <span class="lessImportant">html, body, p, div, img</span>, and much more.
+                        Inside the tag you can have <span class="important">attributes</span> such as <span class="lessImportant">class, id, src</span>.</p>
+                    <p>These <span class="important">attributes or tags</span> are then used in the CSS file to change the styling of the webpage or the content where these attributes lie.
+                         The way it does this is by using the attribute or tags as the <span class="lessImportant">selector</span>, then you choose the <span class="lessImportant">property and value</span> such as 'color: blue;'
+                     and then the content of that selector changes to blue. CSS has many other features as well like <span class="lessImportant">font, width, height, padding, margin, float,</span> etc.</p>
                     <h3>Bootstrap</h3>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                    <p>With <span class="important">Bootstrap</span> I learned the basics as well. It is a framework that makes it a lot easier to create
+                        responsive web-pages. It has many different short cuts inline to what you would have to do a lot more work in CSS such as <span class="lessImportant">p-3, mb-3</span> which would stand for <span class="lessImportant">padding: 3px; margin-bottom: 3px;</span>
+                     Bootstrap also comes with plenty of layouts and examples ready to use for any type of webpage you are looking for.</p>
                 </div>
 
 
