Feature: make the about nav section go to the bottom on click.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="images/logo2.png" id="image1" class="my-0 mr-md-auto font-weight-normal">
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">Home</a>
-        <a class="p-2 text-dark" href="#">About</a>
+        <a class="p-2 text-dark" href="##bottom">About</a>
         <a class="p-2 text-dark" href="content.html">Portfolio</a>
     </nav>
 </div>
@@ -33,7 +33,7 @@
 
 <div class="footer">
     <div id="column1" class="columns" style="text-align: center">
-        <h2 align="center">About Me</h2>
+        <h2 align="center">About Me<a name="#bottom"></a></h2>
         <i id="about" class="fas fa-id-card"></i>
 
 
