--- a/content.html
+++ b/content.html
@@ -20,7 +20,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="index.html">Home</a>
         <a class="p-2 text-dark" href="#">Resume</a>
-        <a class="p-2 text-dark" href="#">Contact</a>
+        <a class="p-2 text-dark" href="##cont">Contact</a>
     </nav>
 </div>
 
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="p-3">
-                    <h4 class="font-italic">Contact</h4>
+                    <h4 class="font-italic">Contact<a name="#cont"></a></h4>
                     <ol class="list-unstyled">
                         <li><a href="https://github.com/jayhurtado">GitHub</a></li>
                         <li><a href="https://linkedin.com/in/jason-m-hurtado">LinkedIn</a></li>
