Feature: link Resume navigation to actual resume.

--- a/content.html
+++ b/content.html
@@ -19,7 +19,7 @@
     <img src="images/logo2.png" id="image1" class="my-0 mr-md-auto font-weight-normal">
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="index.html">Home</a>
-        <a class="p-2 text-dark" href="#">Resume</a>
+        <a class="p-2 text-dark" href="docs/JasonResume.pdf">Resume</a>
         <a class="p-2 text-dark" href="##cont">Contact</a>
     </nav>
 </div>
